jpa entities and repos setup

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-server.error.include-exception=true
 spring.servlet.multipart.max-file-size=128KB
 spring.servlet.multipart.max-request-size=128KB
 
+server.error.include-exception=true
 server.error.include-message=always
 server.error.include-binding-errors=always
+
+#url jdbc:h2:mem:ylabhomework
+spring.datasource.generate-unique-name=false
+spring.datasource.name=ylabhomework
+
+# Log JPA queries
+spring.jpa.show-sql=true
+
