--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.datasource.generate-unique-name=false
 spring.datasource.name=ylabhomework
 
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:./ylabhomework/data
+spring.datasource.url=jdbc:h2:mem:ylabhomework
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
