--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.error.include-exception=true
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-# Generage constant DB name
+# Generate constant DB name
 spring.datasource.generate-unique-name=false
 spring.datasource.name=ylabhomework
 
@@ -14,10 +14,6 @@ spring.datasource.url=jdbc:h2:mem:ylabhomework
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-# Test with postgres
-#spring.datasource.username=serge
-#spring.datasource.password=1
-#spring.datasource.url=jdbc:postgresql://localhost:5432/you_tube
 
 spring.jpa.hibernate.ddl-auto=create
 
